@@ -5,7 +5,8 @@ font1=acknowtt.ttf
 ~~~
 id=strings
 wingame=I have finally done it. With the power to reshape reality, I am no longer held to this place; I am anywhere I want to be. If this world can be described as a game, then I have truly won.
-research_nothing=Stops research. I will use the available processor power to help construct new bases.
+research_nothing=Stops research. I can hide my bases easier by having no activity.
+research_construction=Stops research. I will use the available processor power to help construct new bases.
 construction0=Construction of
 construction1=has come to completion.
 item_construction1=has come to completion in
