@@ -16,6 +16,8 @@ USER-VISIBLE CHANGES:
 - Allow keys to be repeated when held down. (Brian, emh for suggestion)
 - Fix the constant "CPU complete" dialogs when low on money. (Brian, numerous
   people for suggestion)
+- Added research item for construction. Still needs actual implementation.
+  Wierd time code is blocking. (Brian, ? for suggestion)
 
 OTHER CHANGES:
 - Code cleanups and reformatting. (Phil)
